tests/invalid/type/null_literal.pts
function main() : void {
    string s = null;
}
